# era5_repack

./: README.md  pyproject.toml  repack.sbatch  repacker.py
era5_repack/: repack_daily.py
era5_repack/cli/: find_files.py  high5_fm_days.py  high5_fm_specific.py  isitthere.py
era5_stac/: era5.json
